@@ -5,6 +5,7 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:plone="http://namespaces.plone.org/plone"
+    xmlns:monkey="http://namespaces.plone.org/monkey"
     i18n_domain="collective.castle">
 
     <five:registerPackage package="." initialize=".initialize" />
@@ -100,5 +101,13 @@
         for=".interfaces.ICAS4PASPluginSchema
              plone.registry.interfaces.IRecordModifiedEvent"
         handler=".control_panel.updateCASSettings" />
+
+    <monkey:patch
+        description="Patch Products.CAS4PAS to check user permissions on login"
+        class="Products.CAS4PAS.CASAuthHelper.CASAuthHelper"
+        original="authenticateCredentials"
+        replacement=".auth.authenticateCredentials"
+        preserveOriginal="true"
+        />
 
 </configure>
