@@ -4,6 +4,10 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- Added option to prevent login unless user has some role on the portal.
+  This effectively requires some user enumeration source to be present.
+  This option is disabled by default.
+  [davidjb]
 - Added initial unit tests for configuration. 
   [davidjb]
 - Changed to use plone.app.registry for configuration. This reduces control
